fix header on small mobile devices

--- a/public/styles/archive.css
+++ b/public/styles/archive.css
@@ -21,6 +21,11 @@
   font-size: 22px;
   padding-top: 20px;
 }
+@media (max-width: 350px) {
+  .navbar-brand {
+    width: 250px;
+  }
+}
 
 .nav-button {
   color: #FFF !important;
